# rag_fast_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: agent.py  check.py  config.py  ingest.py  main.py  rag.py  streamlit_app.py
eval/: evaluate.py  results.json  testset.json
